act() method done.