@@ -27,7 +27,7 @@ public abstract class Card {
         return marbles.size() == 1;
     }
     public boolean validateMarbleColours(ArrayList<Marble> marbles) {
-        return gameManager.getActivePlayerColour().equals(marbles.get(0).getColour());
+        return gameManager.getActivePlayerColour() == marbles.getFirst().getColour();
     }
 
     public abstract void act(ArrayList<Marble> marbles) throws ActionException, InvalidMarbleException;
